2005-12-22  Jonathan Chambers <jonathan.chambers@ansys.com>

        * gdipFunctions.cs: Do not call GdiplusShutdown for
        now as it causes a crash on MS GDI+.

2005-12-20  Konstantin Triger <kostat@mainsoft.com>

        * Font.jvm.cs: charset support.

2005-12-19  Peter Dennis Bartok  <pbartok@novell.com>

	* Graphics.cs (Flush): Make sure nativeObject is not null

2005-12-14  Konstantin Triger <kostat@mainsoft.com>

        * StrokeFactory.jvm.cs: create AdvancedStroke when have penTransform.

2005-12-13  Konstantin Triger <kostat@mainsoft.com>

	* Bitmap.jvm.cs: Fix MakeTransparent.

2005-12-07 Jordi Mas i Hernandez <jordimash@gmail.com>

	* Graphics.cs: Add new deephs support to CopyFromScreen

2005-12-07 Jordi Mas i Hernandez <jordimash@gmail.com>

	* BufferedGraphicsManager.cs: Fixes signature

2005-12-05  Peter Dennis Bartok  <pbartok@novell.com>

	* Font.cs: 
	  - Implemented FromLogFont
	  - Implemented ToLogFont
	  - Whitespace fixes
	* gdipFunctions.cs:
	  - Added GdipGetLogFontW method
	  - Specified charset for GdipGetLogFontA method
	* gdipStructs.cs: Added LOGFONTW structure

2005-12-05 Gert Driesen <drieseng@users.sourceforge.net>

	* BufferedGraphics.cs: Removed duplicate class. Set eol-style to
	native.
	* BufferedGraphicsManager.cs: Removed duplicate class. Set eol-style
	to native.

2005-12-05 Jordi Mas i Hernandez <jordimash@gmail.com>

	* gdipFunctions.cs: DllExports need it to implement 
	  new Graphics.CopyFromScreen .Net 2.0 methods
	* IDeviceContext.cs: New .Net 2.0 interface
	* Color.cs: Fixes for new .Net 2.0 KnowColors
	* PointF.cs: New .Net 2.0 Add/Subtract methods
	* gdipStructs.cs: Structs need it for Graphics.CopyFromScreen
	* SystemBrushes.cs: New standard SystemBrushes for .Net 2.0
	* SizeF.cs: New .Net 2.0 Add/Subtract methods
	* FontConverter.cs: New .Net 2.0 fixes
	* SystemColors.cs: New standard SystemColors for .Net 2.0
	* SizeFConverter.cs: New .Net 2.0 class (based on SizeConverter)